<?xml version="1.0"?>
<package>
  <name>r2_robot</name>
  <version>0.0.0</version>

  <description>The r2_robot package</description>
  <author>Blake Strebel</author>
  <maintainer email="blakestrebel2018@u.northwestern.edu">Blake Strebel</maintainer>

  <license>TODO</license>
  <url>https://github.com/ME495-EmbeddedSystems/homework-2-f2016-BlakeStrebel</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
